Implement Author API

--- a/BookReview.WebApi/BookReview.WebApi.csproj
+++ b/BookReview.WebApi/BookReview.WebApi.csproj
@@ -23,4 +23,12 @@
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Dtos\" />
+    <None Remove="Repositories\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Dtos\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
 </Project>
