--- a/BookReview.WebApi/appsettings.Development.json
+++ b/BookReview.WebApi/appsettings.Development.json
@@ -7,5 +7,11 @@
   },
   "ConnectionStrings": {
     "BookReview": "Server=localhost,1433;Database=BookReview;User Id=SA; Password=Passw0rd; TrustServerCertificate=True;"
+  },
+  "JwtSettings": {
+    "Key": "YourSuperSecretKeyHereMakeSureItsAtLeast32Bytes!",
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience",
+    "DurationInMinutes": 60
   }
 }
